--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Use it like any other HTML element -->
     <model-viewer
         alt="Modelo"
-        src="proyecto.glb" 
+        src="proyecto2.glb" 
         ar 
         environment-image="https://modelviewer.dev/shared-assets/environments/moon_1k.hdr"
         shadow-intensity="1" 
